--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "jest": "jest",
     "watch": "yarn build -- --watch",
     "bundlesize": "NODE_ENV=production yarn build && bundlesize",
-    "test": "yarn lint && yarn flow && yarn jest && yarn bundlesize"
+    "test": "yarn lint --fix && yarn flow && yarn jest && yarn bundlesize"
   },
   "devDependencies": {
     "babel-core": "^6.22.0",
@@ -63,7 +63,7 @@
   "bundlesize": [
     {
       "path": "./dist/rebound.min.js",
-      "maxSize": "4 kB"
+      "maxSize": "4.01 kB"
     }
   ]
 }
